# alpha-zero-game

./: .gitignore  README.md  cookiecutter.json
alpha-zero-game-{{cookiecutter.game_name_kebab}}/: AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.agents/skills/az-agent/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.agents/skills/az-upgrade-api/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.agents/skills/build-instructions/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.agents/skills/find-alpha-zero-api/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.agents/skills/update-readme/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/: settings.json
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/skills/az-agent/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/skills/build-instruction/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/skills/find-task/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/skills/update-readme/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.claude/skills/upgrade-api-version/: SKILL.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.gemini/: settings.json
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.gemini/commands/: az-agent.md  build-instruction.md  update-readme.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.github/prompts/: build-instruction.md  find-api-header-files.md  find-task.md  upgrade-api-version.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/.github/workflows/: ci.yml
alpha-zero-game-{{cookiecutter.game_name_kebab}}/cmake_external_project/: CMakeLists.txt
alpha-zero-game-{{cookiecutter.game_name_kebab}}/include/{{cookiecutter.game_slug}}/: game.h
alpha-zero-game-{{cookiecutter.game_name_kebab}}/memory/: constitution.md  rules.md  tasks.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/prompts/: az-agent.md  build-instruction.md  cpp-style-guide.md  find-api-header-files.md  find-task.md  update-readme.md  upgrade-api-version.md
alpha-zero-game-{{cookiecutter.game_name_kebab}}/scripts/: fetch_latest_api_ver.sh  fetch_migration_guides.sh  find_task.sh  parse_current_api_ver.sh
alpha-zero-game-{{cookiecutter.game_name_kebab}}/src/: main.cc
alpha-zero-game-{{cookiecutter.game_name_kebab}}/src/{{cookiecutter.game_slug}}/: game.cc
alpha-zero-game-{{cookiecutter.game_name_kebab}}/tests/: CMakeLists.txt  test_fetch_migration_guides.sh
alpha-zero-game-{{cookiecutter.game_name_kebab}}/tests/unit/: CMakeLists.txt  game_constructors.cc
alpha-zero-game-{{cookiecutter.game_slug_kebab}}/: .gitignore  CMakeLists.txt
alpha-zero-game-{{cookiecutter.game_slug_kebab}}/src/: CMakeLists.txt
alpha-zero-game-{{cookiecutter.game_slug_kebab}}/src/{{cookiecutter.game_slug_snake}}/: CMakeLists.txt
az-game-{{cookiecutter.game_name_kebab}}/: AGENTS.md  CMakeLists.txt  README.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/adding-unittests/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/adding-unittests/scripts/: find_fr.sh
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/az-agent/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/az-upgrade-api/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/building-with-cmake/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/design-game-header/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/design-game-header/examples/: guan_dan.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/finding-alpha-zero-api/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/reviewing-code/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/reviewing-fr-test-coverage/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/updating-readme/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/updating-unittest-checklists/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/updating-unittest-checklists/examples/: guan_dan.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/upgrading-api-version/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/working-on-tasks/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/working-on-tasks/scripts/: find_task.sh
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/write-rule-doc/: SKILL.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/write-rule-doc/examples/: guan_dan.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/writing-game-header-design-doc/: SKILL.md  card_games.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/writing-game-rule-doc/: SKILL.md  card_games.md
az-game-{{cookiecutter.game_name_kebab}}/.agents/skills/writing-game-rule-doc/examples/: guan_dan.md
az-game-{{cookiecutter.game_name_kebab}}/.claude/: settings.json
az-game-{{cookiecutter.game_name_kebab}}/.claude/agents/: cpp-reviewer.md
az-game-{{cookiecutter.game_name_kebab}}/.github/instructions/: cpp-style.instructions.md
az-game-{{cookiecutter.game_name_kebab}}/.github/workflows/: ci.yml
az-game-{{cookiecutter.game_name_kebab}}/include/{{cookiecutter.game_slug}}/: game.h
az-game-{{cookiecutter.game_name_kebab}}/memory/: constitution.md  game_design.md  game_rules.md  rules.md  tasks.md  unittest_checklists.md
az-game-{{cookiecutter.game_name_kebab}}/src/: CMakeLists.txt  main.cc
az-game-{{cookiecutter.game_name_kebab}}/src/{{cookiecutter.game_slug}}/: CMakeLists.txt  game.cc
az-game-{{cookiecutter.game_name_kebab}}/src/{{cookiecutter.game_slug}}/game/: CMakeLists.txt  action.cc  basic.cc  constructors.cc  state.cc  string_conv.cc
az-game-{{cookiecutter.game_name_kebab}}/tests/: test_fetch_migration_guides.sh
az-game-{{cookiecutter.game_name_kebab}}/tests/unit/: CMakeLists.txt  game_action.cc  game_basic.cc  game_constructors.cc  game_state.cc  game_string_conv.cc
(+10 files in other folders)
